# MultiNMRFit

./: .gitignore  Fitting.py  Interfaces.py  Multiplets.py  NMRFit.py  Pseudo2D_Fit_5.py  Pseudo2D_Fit_5_old.py  Pseudo2D_Fit_6.py  README.md  UserManual_multiNMRFit.docx  Utils_nmrData.py  readthedocs.yaml  requirements.txt  setup.cfg  setup.py  test0.txt  test_streamlit.py  ~$erManual_multiNMRFit.docx
.github/workflows/: pypi_deployment.yml
Example/: config_example.json  config_test_pseudo2d.json
NMRFit/: Fitting.py  Interfaces.py  Multiplets.py  MyFile.txt  NMRFit.py  NMRFit_2.py  Untitled-1  Utils_nmrData.py
NMRFit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: test.txt  test_carbios.txt
data/Analysis_1D_Plastic/: test_Plastic_Doublet_1.txt  test_Plastic_Singlet_1.txt  test_Plastic_Singlet_2.txt  test_Plastic_Singlet_3.txt
data/Test_Lindsay/: test_TSP_Doublet_2.txt  test_TSP_Singlet_.txt  test_TSP_Singlet_1.txt
doc/: cite.rst  conf.py  faq.rst  index.rst  installation.rst  library.rst  license.rst  models.rst  quickstart.rst  reference.rst  requirements.txt  tutorials.rst
example/: Untitled.ipynb  Untitled2.ipynb  example.ipynb  script_usage.py  script_usage_old.py
example/.ipynb_checkpoints/: example-checkpoint.ipynb
multinmrfit/: __init__.py  __main__.py  fitting.py  io.py  logger.py  multiplets.py  process_log.txt  requirements_for_lolo.txt  run.py  ui.py  ui_new.py  utils_nmrdata.py
multinmrfit/base/: io.py  load_models.py  process.py  spectrum.py
multinmrfit/data/: Input_example.json  (+3 more)
(+30 files in other folders)
