[metadata]
name = multinmrfit
version = attr: multinmrfit.__version__
author = Pierre Millard, Cyril Charlier
author_email = charlier@insa-toulouse.fr
description = Processing of NMR data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NMRTeamTBI/MultiNMRFit
project_urls =
    Bug Tracker = https://github.com/NMRTeamTBI/MultiNMRFit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas >= 1.3.4
    numpy >= 1.21.4
    scipy >= 1.12.0
    nmrglue >= 0.6
    plotly >= 5.18.0
    streamlit >= 1.3.1
    sess-i >= 0.0.2
    streamlit-multipage >= 0.0.18

[options.entry_points]
console_scripts =
    nmrfit = multinmrfit.ui.__main__:main

[flake8]
max-line-length = 160
